Avoid column breaks inside project cards

--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -9,6 +9,7 @@ ul.smartlist > li {
 	padding-left: 28px;
 	padding-right: 28px;
 	background: #ccc;
+	break-inside: avoid;
 }
 
 ul.smartlist > li + li {
